--- a/24.11.2023/dz/задания.md
+++ b/24.11.2023/dz/задания.md
@@ -1,1 +1,36 @@
+# Домашнее задание к 1.12.2023
 
+Выполненное задание добавь к себе на Гитхаб (как мы делали на занятиях) в папку с прошлого занятия, которое было 24.11.2023.
+
+## Задание 1
+В нашу сторону движется снеговик (делается через увеличение и функцию scale()).
+
+План действий:
+1. Сдвинь начало холста в центр при помощи команды translate().
+2. В центре нарисуй снеговика и расскрась его.
+3. Примени команду scale() для увеличения снеговика. Не забудь про переменные!
+
+```
+# Задание 1
+# В нашу сторону движется снеговик (делается через увеличение и функцию scale())
+```
+
+## Задание 2
+Четыре квадрата разных цветов. Двое из них большие и постепенно уменьшаются, два других изначально размерами 1 на 1 увеличиваются. Для изменения размера используй команду scale(). У всех четырёх квадратов разная скорость изменения.
+
+План действий:
+1. Нарисуй два огромных квадрата.
+2. Сделай так, чтобы квадраты уменьшались. Необходимо использовать переменную и команду scale(x).
+3. Сделай так, чтобы квадраты уменьшались с разной скоростью.
+4. Нарисуй еще два маленьких квадрата с размерами 1, 1.
+5. Сделай так, чтобы квадраты увеличивались.
+6. Сделай так, чтобы квадраты увеличивались с разной скоростью.
+7. Сделай так, чтобы у всех квадратов была разная скорость.
+
+```
+# Задание 2
+# Четыре квадрата разных цветов.
+# Двое из них большие и постепенно уменьшаются, 
+# два других изначально размерами 1 на 1 увеличиваются. 
+# У всех четырёх квадратов разная скорость изменения.
+```
